added get_user endpoint
